--- a/Data/index.html
+++ b/Data/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>S3</title>
+    <title>satellite 3d</title>
   </head>
   <body>
     <div id="form">
